Code Cleanup + Style changes (dark mode no longer flashes white when loading!) + Real final dark mode added to chat + efficiency improvements

--- a/resources/chromegle.css
+++ b/resources/chromegle.css
@@ -16,11 +16,21 @@ html {
 
 }
 
+#betterLogo {
+	padding: 0;
+	float: left;
+	font-size: 1em;
+	margin: 0 5em 0 .5em;
+}
+
+
 
 .itemBar {
 	position: absolute;
-	width: 800px;
+	width: 680px;
 	height: inherit;
+	z-index: 2;
+	background-color: white;
 }
 
 .customDiscordBanner {
